docs/api/qiskit/0.37/qiskit.providers.fake_provider.FakeOpenPulse3Q.mdx
---
title: FakeOpenPulse3Q (v0.37)
description: API reference for qiskit.providers.fake_provider.FakeOpenPulse3Q in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.fake_provider.FakeOpenPulse3Q
---

# FakeOpenPulse3Q

<Class id="qiskit.providers.fake_provider.FakeOpenPulse3Q" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/providers/fake_provider/fake_openpulse_3q.py" signature="FakeOpenPulse3Q" modifiers="class">
  Bases: `qiskit.providers.fake_provider.fake_backend.FakeBackend`

  Trivial extension of the FakeOpenPulse2Q.

  FakeBackend initializer.

  **Parameters**

  *   **configuration** ([*BackendConfiguration*](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")) – backend configuration
  *   **time\_alive** (*int*) – time to wait before returning result

  ## Methods

  <span id="qiskit-providers-fake-provider-fakeopenpulse3q-configuration" />

  ### configuration

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.configuration" signature="FakeOpenPulse3Q.configuration()">
    Return the backend configuration.

    **Returns**

    the configuration for the backend.

    **Return type**

    [BackendConfiguration](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse3q-defaults" />

  ### defaults

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.defaults" signature="FakeOpenPulse3Q.defaults()" />

  <span id="qiskit-providers-fake-provider-fakeopenpulse3q-name" />

  ### name

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.name" signature="FakeOpenPulse3Q.name()">
    Return the backend name.

    **Returns**

    the name of the backend.

    **Return type**

    str
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse3q-properties" />

  ### properties

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.properties" signature="FakeOpenPulse3Q.properties()">
    Return backend properties
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse3q-provider" />

  ### provider

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.provider" signature="FakeOpenPulse3Q.provider()">
    Return the backend Provider.

    **Returns**

    the Provider responsible for the backend.

    **Return type**

    [Provider](qiskit.providers.Provider "qiskit.providers.Provider")
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse3q-run" />

  ### run

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.run" signature="FakeOpenPulse3Q.run(run_input, **kwargs)">
    Main job in simulator
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse3q-set-options" />

  ### set\_options

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.set_options" signature="FakeOpenPulse3Q.set_options(**fields)">
    Set the options fields for the backend

    This method is used to update the options of a backend. If you need to change any of the options prior to running just pass in the kwarg with the new value for the options.

    **Parameters**

    **fields** – The fields to update the options

    **Raises**

    **AttributeError** – If the field passed in is not part of the options
  </Function>

  <span id="qiskit-providers-fake-provider-fakeopenpulse3q-status" />

  ### status

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.status" signature="FakeOpenPulse3Q.status()">
    Return the backend status.

    **Returns**

    the status of the backend.

    **Return type**

    [BackendStatus](qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")
  </Function>

  ## Attributes

  ### options

  <Attribute id="qiskit.providers.fake_provider.FakeOpenPulse3Q.options">
    Return the options for the backend

    The options of a backend are the dynamic parameters defining how the backend is used. These are used to control the [`run()`](qiskit.providers.fake_provider.FakeOpenPulse3Q#run "qiskit.providers.fake_provider.FakeOpenPulse3Q.run") method.
  </Attribute>

  ### version

  <Attribute id="qiskit.providers.fake_provider.FakeOpenPulse3Q.version" attributeValue="1" />
</Class>

