docs/api/qiskit/1.2/qiskit.providers.fake_provider.FakeOpenPulse3Q.mdx
---
title: FakeOpenPulse3Q (v1.2)
description: API reference for qiskit.providers.fake_provider.FakeOpenPulse3Q in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.fake_provider.FakeOpenPulse3Q
---

# FakeOpenPulse3Q

<Class id="qiskit.providers.fake_provider.FakeOpenPulse3Q" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/fake_provider/fake_openpulse_3q.py#L29-L340" signature="qiskit.providers.fake_provider.FakeOpenPulse3Q" modifiers="class">
  Bases: [`FakeBackend`](providers_fake_provider#qiskit.providers.fake_provider.FakeBackend "qiskit.providers.fake_provider.fake_backend.FakeBackend")

  Trivial extension of the FakeOpenPulse2Q.

  FakeBackend initializer.

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.providers.fake_provider.fake_backend.FakeBackend` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. Fake backends using BackendV1 are deprecated in favor of [`GenericBackendV2`](qiskit.providers.fake_provider.GenericBackendV2 "qiskit.providers.fake_provider.GenericBackendV2"). You can convert BackendV1 to [`BackendV2`](qiskit.providers.BackendV2 "qiskit.providers.BackendV2") with [`BackendV2Converter`](qiskit.providers.BackendV2Converter "qiskit.providers.BackendV2Converter").
  </Admonition>

  **Parameters**

  *   **configuration** ([*BackendConfiguration*](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")) – backend configuration
  *   **time\_alive** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – time to wait before returning result

  ## Attributes

  ### options

  <Attribute id="qiskit.providers.fake_provider.FakeOpenPulse3Q.options">
    Return the options for the backend

    The options of a backend are the dynamic parameters defining how the backend is used. These are used to control the [`run()`](#qiskit.providers.fake_provider.FakeOpenPulse3Q.run "qiskit.providers.fake_provider.FakeOpenPulse3Q.run") method.
  </Attribute>

  ### version

  <Attribute id="qiskit.providers.fake_provider.FakeOpenPulse3Q.version" attributeValue="1" />

  ## Methods

  ### configuration

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.configuration" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/backend.py#L144-L150" signature="configuration()">
    Return the backend configuration.

    **Returns**

    the configuration for the backend.

    **Return type**

    [BackendConfiguration](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")
  </Function>

  ### defaults

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.defaults" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/fake_provider/fake_openpulse_3q.py#L339-L340" signature="defaults()" />

  ### name

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.name" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/backend.py#L183-L189" signature="name()">
    Return the backend name.

    **Returns**

    the name of the backend.

    **Return type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")
  </Function>

  ### properties

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.properties" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/fake_provider/fake_backend.py#L76-L126" signature="properties()">
    Return backend properties
  </Function>

  ### provider

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.provider" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/backend.py#L161-L167" signature="provider()">
    Return the backend Provider.

    **Returns**

    the Provider responsible for the backend.

    **Return type**

    [Provider](qiskit.providers.Provider "qiskit.providers.Provider")
  </Function>

  ### run

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.run" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/fake_provider/fake_backend.py#L137-L165" signature="run(run_input, **kwargs)">
    Main job in simulator
  </Function>

  ### set\_options

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.set_options" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/backend.py#L125-L142" signature="set_options(**fields)">
    Set the options fields for the backend

    This method is used to update the options of a backend. If you need to change any of the options prior to running just pass in the kwarg with the new value for the options.

    **Parameters**

    **fields** – The fields to update the options

    **Raises**

    [**AttributeError**](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.13)") – If the field passed in is not part of the options
  </Function>

  ### status

  <Function id="qiskit.providers.fake_provider.FakeOpenPulse3Q.status" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/backend.py#L169-L181" signature="status()">
    Return the backend status.

    **Returns**

    the status of the backend.

    **Return type**

    [BackendStatus](qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")
  </Function>
</Class>

